--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pipenv==9.0.1
 psutil==5.3.1
 pycodestyle==2.3.1
 pyflakes==1.6.0
+pymssql==2.1.3
 pyTelegramBotAPI==3.5.1
 requests==2.18.4
 six==1.11.0
